[package]
name = "imagecli"
version = "0.2.1"
authors = ["theotherphil"]
edition = "2018"
description = "A command line image processing tool."
repository = "https://github.com/theotherphil/imagecli.git"
homepage = "https://github.com/theotherphil/imagecli"
license = "MIT"
exclude = ["images/*"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
glob = "0.3.0"
image = "0.22.2"
imageproc = "0.19.1"
lazy_static = "1.4.0"
nom = "7.0.0"
regex = "1.0"
snafu = "0.5.0"

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "0.6.1"

[lib]
name = "imagecli"
path = "src/lib.rs"

[[bin]]
name = "imagecli"
path = "src/main.rs"
doc = false

[[bench]]
name = "benchmark"
harness = false

[patch.crates-io]
rand_os = { path = "../rand/rand_os" }
rand_core = { path = "../rand/rand_core" }
atty = { git = "https://github.com/mvolfik/atty-rs.git" }
libc = { git = "https://github.com/mvolfik/rust-libc.git", branch = "helenos-v0.2" }
